0.8.0 (currently working on)

0.7.0 (branched 2009-01-02)
- [#2520] Fix: Times are deleted when saving an event in the FE editor
- [#2519] Fix: Thank-you e-mail has a surplus colon for events without an event type
- [#2517] Fix: The category icon in the list view should have no link border
- [#2508] Fix: Category column just shows "Array" on list view other than "seminars_list"
- [#2456] Feature: Add lazy loading for models
- [#2019] Change: Change the labels "Multiple event topic|date" in locallang_db.xml
- [#2350] Change: Move the "create new" button from the top to the bottom of the timeslots IRRE field
- [#2425] Change: Rename "Save and close" button in the FE editor to "Save and back"
- [#2487] Fix: Button "submit and stay" is no button
- [#1653] Change: Add a "save + new" button for target groups in the BE
- [#2489] Fix: "Edit event" link missing in the "my managed events" list
- [#2490] Fix: Broken label "label_" in the FE registrations list
- [#2502] Change: Update copyrights to 2009
- [#2477] Fix: Icon for CSV export of event data missing from mod2
- [#2429] Feature: On the registration page, list the requirements for a registration if they are not fulfilled
- [#2491] Feature: Add a class tx_seminars_mod2_BackEndModule
- [#2415] Feature: In the single view, add a part "Required for"
- [#2428] Feature: Add a function for checking whether a user fulfillls all requirements for a registration
- [#2414] Feature: In the single view, add a part "Requirements"
- [#2393] Feature: Add a field "requirements" to topics
- [#1634] Change: Rename some table constants of m:n tables for consistency
- [#393] Change: Use getListViewConfValue* in pi1
- [#768] Change: Use real visibility keywords (public/protected/private)
- [#2215] Fix: Problems with Page Browser
- [#2479] Fix: $this->internal['orderByList'] is set but never read in tx_seminars_pi1
- [#2475] Fix: Unused variable $registrationDeadline in registrationManager::getRegistrationLink